--- a/src/components/shared/Navbar.module.css
+++ b/src/components/shared/Navbar.module.css
@@ -1,11 +1,11 @@
 .mainContainer {
   /* background-color: #fff; */
-  background-color: #1a73e8;
+  background-color: #006effb8;
   /* margin: 0 0 100px; */
   position: fixed;
-  top: 0;
+  top: 2px;
   width: 100%;
-  border-radius: 50px 50px 0 0;
+  border-radius: 50px;
   box-shadow: 0px 5px 24px rgba(149, 157, 165, 0.4);
 }
 
@@ -13,15 +13,16 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 40px;
-  padding: 15px 180px;
+  height: 20px;
+  /* padding: 15px 180px; */
+  padding: 15px 100px;
 }
 
 .productLink a {
   background-color: #fff;
   border-radius: 30px;
-  padding: 1px 4px;
-  margin-right: 5px;
+  padding: 2px 5px;
+  margin-right: 10px;
   text-decoration: none;
   color: #000;
   /* font-weight: bold; */
