--- a/src/components/shared/Navbar.module.css
+++ b/src/components/shared/Navbar.module.css
@@ -2,7 +2,7 @@
   /* background-color: #fff; */
   background-color: #006effb8;
   /* margin: 0 0 100px; */
-  position: fixed;
+  /* position: fixed; */
   top: 2px;
   width: 100%;
   border-radius: 50px;
