--- a/src/components/shared/Footer.module.css
+++ b/src/components/shared/Footer.module.css
@@ -2,12 +2,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #006effb8;
+    background-color: black;
     width: 100%;
-    border-radius: 50px;
+    height: 100px;
     box-shadow: 0px 5px 24px rgba(149, 157, 165, 0.4);
     padding: 5px;
     margin-bottom: 5px;
+    color: gray;
   
   }
 
