--- a/src/components/shared/Footer.module.css
+++ b/src/components/shared/Footer.module.css
@@ -4,10 +4,10 @@
     align-items: center;
     background-color: black;
     width: 100%;
-    height: 100px;
-    box-shadow: 0px 5px 24px rgba(149, 157, 165, 0.4);
+    height: 60px;
+    /* box-shadow: 0px 5px 24px rgba(149, 157, 165, 0.4); */
     padding: 5px;
-    margin-bottom: 5px;
+    /* margin-bottom: 5px; */
     color: gray;
   
   }
